--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.29.2",
     "next": "16.1.6",
+    "plotly.js": "^3.3.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
